<?xml version="1.0"?>
<package>
  <name>mppi_gpu</name>
  <version>0.0.1</version>
  <description>mppi_gou</description>

  <maintainer email="todo@example.com">To Do</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>uuv_auv_control_allocator</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>uuv_auv_control_allocator</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>

  </export>
</package>
